--- a/src/main/resources/templates/fotoForm.html
+++ b/src/main/resources/templates/fotoForm.html
@@ -49,7 +49,7 @@
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
 					<li><a href="/" title="">Home</a></li>
-					<li class="has-children"><a href="/categorie" title="">Categorie</a>
+					<li class="has-children">Categorie
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
 							<li><a href="/mostraAlbums">Album</a></li>
@@ -63,27 +63,7 @@
 			</nav>
 			<!-- end main-nav-wrap -->
 
-			<div class="search-wrap">
-
-				<form role="search" method="get" class="search-form" action="#">
-					<label> <span class="hide-content">Search for:</span> <input
-						type="search" class="search-field"
-						placeholder="Type Your Keywords" value="" name="s"
-						title="Search for:" autocomplete="off">
-					</label> <input type="submit" class="search-submit" value="Search">
-				</form>
-
-				<a href="#" id="close-search" class="close-btn">Close</a>
-
-			</div>
-			<!-- end search wrap -->
-
-			<div class="triggers">
-				<a class="search-trigger" href="#"><i class="fa fa-search"></i></a>
-				<a class="menu-toggle" href="#"><span>Menu</span></a>
-			</div>
-			<!-- end triggers -->
-
+			
 		</div>
 
 	</header>
