--- a/src/main/resources/templates/mostraFotografi.html
+++ b/src/main/resources/templates/mostraFotografi.html
@@ -67,29 +67,6 @@
 				</ul>
 			</nav>
 			
-			
-			<!-- end main-nav-wrap -->
-
-			<div class="search-wrap">
-
-				<form role="search" method="get" class="search-form" action="#">
-					<label> <span class="hide-content">Search for:</span> <input
-						type="search" class="search-field"
-						placeholder="Type Your Keywords" value="" name="s"
-						title="Search for:" autocomplete="off">
-					</label> <input type="submit" class="search-submit" value="Search">
-				</form>
-
-				<a href="#" id="close-search" class="close-btn">Close</a>
-
-			</div>
-			<!-- end search wrap -->
-
-			<div class="triggers">
-				<a class="search-trigger" href="#"><i class="fa fa-search"></i></a>
-				<a class="menu-toggle" href="#"><span>Menu</span></a>
-			</div>
-			<!-- end triggers -->
 
 		</div>
 
@@ -149,15 +126,10 @@
 	
 	
 <!-- PULSANTE TORNA INDIETRO -->
-
-					<form name="cForm" id="cForm" th:action="@{/categorie}" method="post"
-						th:object="${categorie}">
-						<fieldset>
-
-							<button type="submit" class="submit button-primary full-width-on-mobile">Indietro</button>
-
-						</fieldset>
-					</form>
+					
+	<form name="cForm" id="cForm" method="get" action="/pannelloDiControllo" th:if="${utente == 'ADMIN'}">
+			<button type="submit" class="submit button-primary full-width-on-mobile" >Indietro</button>
+	</form>
 
 
 <!-- START BOTTOM FOOTER -->
