--- a/src/main/resources/templates/mostraFotografo.html
+++ b/src/main/resources/templates/mostraFotografo.html
@@ -1,31 +1,214 @@
-<!DOCTYPE html >
-<html xmlns:th= "http://www.thymeleaf.org" xmlns="htttp://www.w3.org/1999/html">
+<!DOCTYPE html>
+<html class="no-js" lang="en" xmlns:th= "http://www.thymeleaf.org" xmlns="htttp://www.w3.org/1999/html">
 <head>
-</head>
-<body>
-	<div>
-		<h4> Fotografo </h4>
-		
-		Nome: <span th:text=${fotografo.nome}> </span>
-		
-		Cognome: <span th:text=${fotografo.cognome}> </span>
-		
-		<br/><img th:src="@{${fotografo.imgProfilo}}" width="70px" height="70px">
-		
-		<br/>
-		<br/>
-		<form name="cForm" id="cForm" method="get" action="/cercaFotografo" th:if="${utente == 'ADMIN'}">
-				<button type="submit" class="half-width">Nuova ricerca</button>
-		</form>
 
-		<form name="cForm" id="cForm" method="get" action="/pannelloDiControllo" th:if="${utente == 'ADMIN'}">
-			<button type="submit" class="half-width">Torna all'area staff</button>
+<!--- basic page needs
+   ================================================== -->
+<meta charset="utf-8">
+<title>Fotografo</title>
+<meta name="description" content="">
+<meta name="author" content="">
+
+<!-- mobile specific metas
+   ================================================== -->
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, maximum-scale=1">
+
+<!-- CSS
+   ================================================== -->
+<link rel="stylesheet" href="../css/base.css">
+<link rel="stylesheet" href="../css/vendor.css">
+<link rel="stylesheet" href="../css/main.css">
+
+
+
+<!-- script
+   ================================================== -->
+<script src='js/modernizr.js'></script>
+<script src='js/pace.min.js'></script>
+
+<!-- favicons
+	================================================== -->
+<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+<link rel="icon" href="../favicon.ico" type="image/x-icon">
+
+</head>
+
+<body id="top">
+
+	<!-- header 
+   ================================================== -->
+	<header class="short-header">
+
+		<div class="gradient-block"></div>
+
+		<div class="row header-content">
+
+			<div class="logo">
+				<a href="/home">Author</a>
+			</div>
+
+			<nav id="main-nav-wrap">
+				<ul class="main-navigation sf-menu">
+					<li><a href="/" title="">Home</a></li>
+					<li class="has-children"><a href="/categorie"
+						title="">Categorie</a>
+						<ul class="sub-menu">
+							<li><a href="/mostraFotos">Foto</a></li>
+							<li><a href="/mostraAlbums">Album</a></li>
+							<li><a href="/mostraFotografi">Fotografi</a></li>
+						</ul></li>
+					<li class="current"><a href="/carrello" title="">Carrello</a></li>	
+					<li><a href="/about" title="">About</a></li>
+					<li><a href="/pannelloDiControllo" title="">Staff</a></li>
+				</ul>
+			</nav>
+			<!-- end main-nav-wrap -->
+
+			<div class="search-wrap">
+
+				<form role="search" method="get" class="search-form" action="#">
+					<label> <span class="hide-content">Search for:</span> <input
+						type="search" class="search-field"
+						placeholder="Type Your Keywords" value="" name="s"
+						title="Search for:" autocomplete="off">
+					</label> <input type="submit" class="search-submit" value="Search">
+				</form>
+
+				<a href="#" id="close-search" class="close-btn">Close</a>
+
+			</div>
+			<!-- end search wrap -->
+
+			<div class="triggers">
+				<a class="search-trigger" href="#"><i class="fa fa-search"></i></a>
+				<a class="menu-toggle" href="#"><span>Menu</span></a>
+			</div>
+			<!-- end triggers -->
+
+		</div>
+
+	</header>
+	<!-- end header -->
+
+
+	<!-- page header
+   ================================================== -->
+	<section id="page-header">
+		<div class="row current-cat">
+			<div class="col-full">
+				<h1>Fotografo selezionato</h1>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- masonry
+   ================================================== -->
+	<section id="bricks" class="with-top-sep">
+
+		<div class="row masonry">
+
+			<!-- brick-wrapper -->
+			<div class="bricks-wrapper">
+
+				<div class="grid-sizer"></div>
+
+				<article class="brick entry format-standard animate-this">
+
+					<div class="entry-thumb">
+						<a href="single-standard.html" class="thumb-link"> <img
+							th:src="@{${fotografo.imgProfilo}}" width="512px" height="512px">
+						</a>
+					</div>
+
+					<div class="entry-text">
+						<div class="entry-header">
+
+							<div class="entry-meta">
+								<span class="cat-links"> <a th:text=${fotografo.nome}></a> <a
+									th:text=${fotografo.cognome}></a>
+								</span>
+							</div>
+						</div>
+					</div>
+			</div>
+		</div>
+	</section>
+	
+	
+<!-- PULSANTE INDIETRO -->
+	<article class="brick entry format-standard animate-this">
+	<div class="row">
+		<form name="cForm" id="cForm" th:action="@{/mostraFotografi}" method="post"
+			th:object="${fotografi}">
+			<button type="submit" class="half-widht">Indietro</button>
 		</form>
-		
-		<form name="cForm" id="cForm" method="get" action="/" th:if="${utente != 'ADMIN'}">
-			<button type="submit" class="half-width">Torna alla home</button>
-		</form>
-		
 	</div>
+	</article>
+	
+	<!-- PULSANTE TORNA ALLA HOME -->
+	<article class="brick entry format-standard animate-this">
+	<div class="row">
+		<form name="cForm" id="cForm" th:action="@{/}" method="post"
+			th:object="${home}">
+			<button type="submit" class="half-widht">Torna alla Home</button>
+		</form>
+	</div>
+	</article>
+	
+	<!-- PULSANTE TORNA ALL'AREA STAFF -->
+	<article class="brick entry format-standard animate-this">
+	<div class="row">
+		<form name="cForm" id="cForm" method="get" action="/pannelloDiControllo" th:if="${utente == 'ADMIN'}">
+			<button type="submit" class="half-widht">Torna all'area Staff</button>
+		</form>
+	</div>
+	</article>
+	
+	<!-- PULSANTE NUOVA RICERCA -->
+	<article class="brick entry format-standard animate-this">
+	<div class="row">
+		<form name="cForm" id="cForm" method="get" action="/cercaFotografo" th:if="${utente == 'ADMIN'}">
+			<button type="submit" class="half-widht">Cerca Foto</button>
+		</form>
+	</div>
+	</article>
+
+
+<!-- START BOTTOM FOOTER -->
+<footer>
+		<div class="footer-bottom">
+			<div class="row">
+
+				<div class="col-twelve">
+					<div class="copyright">
+						<span>© Copyright SILPH 2019</span> <span>Design by <a
+							href="http://www.styleshout.com/">styleshout</a></span>
+					</div>
+
+					<div id="go-top">
+						<a class="smoothscroll" title="Back to Top" href="#top"><i
+							class="icon icon-arrow-up"></i></a>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		<!-- end footer-bottom -->
+
+	</footer>
+
+	<div id="preloader">
+		<div id="loader"></div>
+	</div>
+
+	<!-- Java Script
+   ================================================== -->
+	<script src="js/jquery-2.1.3.min.js"></script>
+	<script src="js/plugins.js"></script>
+	<script src="js/main.js"></script>
+
 </body>
+
 </html>
