--- a/src/main/resources/templates/mostraFoto.html
+++ b/src/main/resources/templates/mostraFoto.html
@@ -25,13 +25,9 @@
 			<button type="submit" class="half-width">Torna alla home</button>
 		</form>
 		
-		<form name="cForm" id="cForm" method="get" action="/fotoCarrello" th:if="${utente != 'ADMIN'}">
-			<button type="submit" class="half-width">Aggiungi al carrello</button>
-		</form>
-		
-		<form name="cForm" id="cForm" method="get" action="/fotoCarrello" th:if="${x == 'x'}">
-			<button type="submit" class="half-width">XXX</button>
-		</form>
+		<a th:href="@{'/fotoCarrello' + '/' + ${foto.id}}" class="thumb-link">
+			<button type="submit" class="half-width" th:if="${utente != 'ADMIN'}">Aggiungi al carrello</button>
+		</a>
 		
 	</div>
 </body>
