--- a/src/main/resources/templates/mostraFotos.html
+++ b/src/main/resources/templates/mostraFotos.html
@@ -54,8 +54,7 @@
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
 					<li><a href="/home" title="">Home</a></li>
-					<li class="has-children"><a href="/categorie"
-						title="">Categorie</a>
+					<li class="has-children">Categorie
 						<ul class="sub-menu">
 							<li class="current"><a href="/mostraFotos">Foto</a></li>
 							<li><a href="/mostraAlbums">Album</a></li>
