--- a/src/main/resources/templates/mostraCarrello.html
+++ b/src/main/resources/templates/mostraCarrello.html
@@ -20,15 +20,15 @@
 
 <!-- CSS
    ================================================== -->
-<link rel="stylesheet" href="css/base.css">
-<link rel="stylesheet" href="css/vendor.css">
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="../css/base.css">
+<link rel="stylesheet" href="../css/vendor.css">
+<link rel="stylesheet" href="../css/main.css">
 
 
 <!-- script
    ================================================== -->
-<script src="js/modernizr.js"></script>
-<script src="js/pace.min.js"></script>
+<script src="../js/modernizr.js"></script>
+<script src="../js/pace.min.js"></script>
 
 <!-- favicons
 	================================================== -->
@@ -48,12 +48,12 @@
 		<div class="row header-content">
 
 			<div class="logo">
-				<a href="/home">Author</a>
+				<a href="/">Author</a>
 			</div>
 
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
-					<li><a href="/home" title="">Home</a></li>
+					<li><a href="/" title="">Home</a></li>
 					<li class="has-children">Categorie
 						<ul class="sub-menu">
 							<li class="current"><a href="/mostraFotos">Foto</a></li>
@@ -67,8 +67,6 @@
 			</nav>
 			
 			
-			<!-- end main-nav-wrap -->
-
 
 		</div>
 
@@ -81,7 +79,7 @@
 	<section id="page-header">
 		<div class="row current-cat">
 			<div class="col-full">
-				<h1>Carrello</h1>
+				<h1>carrello</h1>
 			</div>
 		</div>
 	</section>
@@ -97,23 +95,24 @@
 			
 			<div class="bricks-wrapper">
 
-		<div th:each="foto : ${fotos}">
+		<div th:each="foto : ${carrello.fotos}">
 				<div class="grid-sizer"></div>
 
 				<article class="brick entry format-standard animate-this">
 					<div class="entry-thumb">
-						<a th:href="@{'/mostraFoto' + '/' + ${foto.id}}" class="thumb-link" >
+						<a th:href="@{'/mostraFoto' + '/' + ${foto.id}}" class="thumb-link" th:if="${utente != 'ADMIN'}">
+						<img th:src="@{${foto.indirizzo}}" width="1024px" height="1024px" class="center">
+						</a>
+						<a th:href="@{'/mostraFotoA' + '/' + ${foto.id}}" class="thumb-link" th:if="${utente == 'ADMIN'}">
 						<img th:src="@{${foto.indirizzo}}" width="1024px" height="1024px" class="center">
 						</a>
 					</div>
 
 					<div class="entry-text">
 						<div class="entry-header">
-
 							<div class="entry-meta">
 								<span class="cat-links"> 			
-								<a th:href="@{'/mostraFoto' + '/' + ${foto.id}}" th:text="${foto.titolo}" th:if="${utente != 'ADMIN'}"></a>
-								<a th:href="@{'/mostraFotoAdmin' + '/' + ${foto.id}}" th:text="${foto.titolo}" th:if="${utente == 'ADMIN'}"></a>
+								<a th:text="${foto.titolo}"></a>
 								</span>
 							</div>
 						</div>
@@ -127,14 +126,9 @@
 	
 <!-- PULSANTE TORNA INDIETRO -->
 
-					<form name="cForm" id="cForm" th:action="@{/categorie}" method="post"
-						th:object="${categorie}">
-						<fieldset>
-
-							<button type="submit" class="submit button-primary full-width-on-mobile">Indietro</button>
-
-						</fieldset>
-					</form>
+	<form name="cForm" id="cForm" method="get" action="/pannelloDiControllo" th:if="${utente == 'ADMIN'}">
+			<button type="submit" class="submit button-primary full-width-on-mobile" >Indietro</button>
+	</form>
 
 
 <!-- START BOTTOM FOOTER -->
@@ -166,9 +160,9 @@
 
 	<!-- Java Script
    ================================================== -->
-	<script src="js/jquery-2.1.3.min.js"></script>
-	<script src="js/plugins.js"></script>
-	<script src="js/main.js"></script>
+	<script src="../js/jquery-2.1.3.min.js"></script>
+	<script src="../js/plugins.js"></script>
+	<script src="../js/main.js"></script>
 
 </body>
 
