--- a/src/main/resources/templates/mostraCarrello.html
+++ b/src/main/resources/templates/mostraCarrello.html
@@ -56,11 +56,11 @@
 					<li><a href="/" title="">Home</a></li>
 					<li class="has-children">Categorie
 						<ul class="sub-menu">
-							<li class="current"><a href="/mostraFotos">Foto</a></li>
+							<li><a href="/mostraFotos">Foto</a></li>
 							<li><a href="/mostraAlbums">Album</a></li>
 							<li><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
-					<li><a href="/carrello" title="">Carrello</a></li>	
+					<li class="current"><a href="/mostraCarrello" title="">Carrello</a></li>	
 					<li><a href="/about" title="">About</a></li>
 					<li><a href="/pannelloDiControllo" title="">Staff</a></li>
 				</ul>
