--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -58,7 +58,7 @@
 			         </ul>
 					</li>
 					<li class="has-children">
-						<a href="/carrello" title="">Carrello</a>
+						<a href="/mostraCarrello" title="">Carrello</a>
 					</li>
 					<li class="current"><a href="/about" title="">About</a></li>	
 					<li><a href="/pannelloDiControllo" title="">Staff</a></li>										
