--- a/src/main/resources/templates/confermaInserimentoFotografo.html
+++ b/src/main/resources/templates/confermaInserimentoFotografo.html
@@ -55,7 +55,7 @@
 							<li><a href="/mostraAlbums">Album</a></li>
 							<li><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
-					<li class="has-children"><a href="/carrello"
+					<li class="has-children"><a href="/mostraCarrello"
 						title="">Carrello</a></li>
 					<li><a href="/about" title="">About</a></li>
 					<li class="current"><a href="/pannelloDiControllo" title="">Staff</a></li>
