--- a/src/main/resources/templates/mostraFotografi.html
+++ b/src/main/resources/templates/mostraFotografi.html
@@ -9,7 +9,7 @@
 <!--- basic page needs
    ================================================== -->
 <meta charset="utf-8">
-<title>Foto</title>
+<title>Fotografi</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -53,19 +53,19 @@
 
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
-					<li><a href="/home" title="">Home</a></li>
-					<li class="has-children">Categorie
+					<li><a href="/" title="">Home</a></li>
+					<li class="has-children"><a href="/categorie"
+						title="">Categorie</a>
 						<ul class="sub-menu">
-							<li class="current"><a href="/mostraFotos">Foto</a></li>
+							<li><a href="/mostraFotos">Foto</a></li>
 							<li><a href="/mostraAlbums">Album</a></li>
-							<li><a href="/mostraFotografi">Fotografi</a></li>
+							<li class="current"><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
 					<li><a href="/mostraCarrello" title="">Carrello</a></li>	
 					<li><a href="/about" title="">About</a></li>
 					<li><a href="/pannelloDiControllo" title="">Staff</a></li>
 				</ul>
 			</nav>
-			
 			
 
 		</div>
@@ -79,8 +79,8 @@
 	<section id="page-header">
 		<div class="row current-cat">
 			<div class="col-full">
-				<h1>Foto</h1>
-				<h4> Tutte le foto caricate</h4>
+				<h1>Fotografi</h1>
+				<h4> Tutti i fotografi registrati</h4>
 			</div>
 		</div>
 	</section>
@@ -96,24 +96,24 @@
 			
 			<div class="bricks-wrapper">
 
-		<div th:each="foto : ${fotos}">
+		<div th:each="fotografo : ${fotografi}">
 				<div class="grid-sizer"></div>
 
 				<article class="brick entry format-standard animate-this">
 					<div class="entry-thumb">
-						<a th:href="@{'/mostraFoto' + '/' + ${foto.id}}" class="thumb-link" th:if="${utente != 'ADMIN'}">
-						<img th:src="@{${foto.indirizzo}}" width="1024px" height="512px" class="center">
-						</a>
-						<a th:href="@{'/mostraFotoA' + '/' + ${foto.id}}" class="thumb-link" th:if="${utente == 'ADMIN'}">
-						<img th:src="@{${foto.indirizzo}}" width="1024px" height="512px" class="center">
+						<a th:href="@{'/fotografo' + '/' + ${fotografo.id}}" class="thumb-link" >
+						 
+						<img th:src="@{${fotografo.imgProfilo}}" width="512px" height="512px" class="center" >
 						</a>
 					</div>
 
 					<div class="entry-text">
 						<div class="entry-header">
+
 							<div class="entry-meta">
 								<span class="cat-links"> 			
-								<a th:text="${foto.titolo}"></a>
+								<a th:href="@{'/fotografo' + '/' + ${fotografo.id}}" th:text="${fotografo.nome} + ' ' +${fotografo.cognome}" th:if="${utente != 'ADMIN'}"></a>
+								<a th:href="@{'/fotografoAdmin' + '/' + ${fotografo.id}}" th:text="${fotografo.nome} + ' ' +${fotografo.cognome}" th:if="${utente == 'ADMIN'}"></a>
 								</span>
 							</div>
 						</div>
@@ -123,13 +123,20 @@
 			</div>
 		</div>
 	</section>
-	
-	
-<!-- PULSANTE TORNA INDIETRO -->
 
-	<form name="cForm" id="cForm" method="get" action="/pannelloDiControllo" th:if="${utente == 'ADMIN'}">
-			<button type="submit" class="submit button-primary full-width-on-mobile" >Indietro</button>
-	</form>
+	
+	<!-- PULSANTE INDIETRO -->
+	<article class="brick entry format-standard animate-this">
+	<div class="row">
+		<form name="cForm" id="cForm" th:action="@{/}" method="post"
+			th:object="${home}">
+			<button type="submit" class="half-widht">Indietro</button>
+		</form>
+	</div>
+	</article>
+	
+	
+	
 
 
 <!-- START BOTTOM FOOTER -->
