--- a/src/main/resources/templates/mostraFotografo.html
+++ b/src/main/resources/templates/mostraFotografo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en" xmlns:th= "http://www.thymeleaf.org" xmlns="htttp://www.w3.org/1999/html">
+<html class="no-js" lang="en" xmlns:th="http://www.thymeleaf.org"
+	xmlns="htttp://www.w3.org/1999/html">
 <head>
 
 <!--- basic page needs
@@ -24,8 +25,8 @@
 
 <!-- script
    ================================================== -->
-<script src='js/modernizr.js'></script>
-<script src='js/pace.min.js'></script>
+<script src='../js/modernizr.js'></script>
+<script src='../js/pace.min.js'></script>
 
 <!-- favicons
 	================================================== -->
@@ -51,14 +52,13 @@
 			<nav id="main-nav-wrap">
 				<ul class="main-navigation sf-menu">
 					<li><a href="/" title="">Home</a></li>
-					<li class="has-children"><a href="/categorie"
-						title="">Categorie</a>
+					<li class="has-children"><a href="/categorie" title="">Categorie</a>
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
 							<li><a href="/mostraAlbums">Album</a></li>
-							<li><a href="/mostraFotografi">Fotografi</a></li>
+							<li  class="current"><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
-					<li class="current"><a href="/carrello" title="">Carrello</a></li>	
+					<li><a href="/mostraCarrello" title="">Carrello</a></li>
 					<li><a href="/about" title="">About</a></li>
 					<li><a href="/pannelloDiControllo" title="">Staff</a></li>
 				</ul>
@@ -114,70 +114,94 @@
 
 				<div class="grid-sizer"></div>
 
-				<article class="brick entry format-standard animate-this">
+				<article class="brick entry format-standard animate-this" style="margin-left: 37.5%">
 
 					<div class="entry-thumb">
-						<a href="single-standard.html" class="thumb-link"> <img
-							th:src="@{${fotografo.imgProfilo}}" width="512px" height="512px">
-						</a>
+						<img th:src="@{${fotografo.imgProfilo}}" width="512px"
+							height="512px">
 					</div>
 
 					<div class="entry-text">
 						<div class="entry-header">
 
 							<div class="entry-meta">
-								<span class="cat-links"> <a th:text=${fotografo.nome}></a> <a
-									th:text=${fotografo.cognome}></a>
+								<span class="cat-links"> <a th:text=${fotografo.nome}></a>
+									<a th:text=${fotografo.cognome}></a>
 								</span>
 							</div>
 						</div>
 					</div>
+				</article>
 			</div>
 		</div>
 	</section>
 	
 	
-<!-- PULSANTE INDIETRO -->
+	<!-- PULSANTE AI SUOI ALBUM -->
 	<article class="brick entry format-standard animate-this">
-	<div class="row">
-		<form name="cForm" id="cForm" th:action="@{/mostraFotografi}" method="post"
-			th:object="${fotografi}">
-			<button type="submit" class="half-widht">Indietro</button>
-		</form>
-	</div>
+		<div class="row">
+			<form name="cForm" id="cForm" th:action="@{/mostraAlbums.idAlbum}"
+				method="get" th:object="${album}">
+				<button type="submit" class="half-widht">Album Caricati</button>
+			</form>
+		</div>
 	</article>
 	
+	<!-- PULSANTE AI SUOI ALBUM -->
+	<article class="brick entry format-standard animate-this">
+		<div class="row">
+			<form name="cForm" id="cForm" th:action="@{/mostraFotos.idFoto}"
+				method="get" th:object="${foto}">
+				<button type="submit" class="half-widht">Foto caricate</button>
+			</form>
+		</div>
+	</article>
+
+
+	<!-- PULSANTE INDIETRO -->
+	<article class="brick entry format-standard animate-this">
+		<div class="row">
+			<form name="cForm" id="cForm" th:action="@{/mostraFotografi}"
+				method="get" th:object="${fotografi}">
+				<button type="submit" class="half-widht">Indietro</button>
+			</form>
+		</div>
+	</article>
+
 	<!-- PULSANTE TORNA ALLA HOME -->
 	<article class="brick entry format-standard animate-this">
-	<div class="row">
-		<form name="cForm" id="cForm" th:action="@{/}" method="post"
-			th:object="${home}">
-			<button type="submit" class="half-widht">Torna alla Home</button>
-		</form>
-	</div>
+		<div class="row">
+			<form name="cForm" id="cForm" th:action="@{/}" method="post"
+				th:object="${home}">
+				<button type="submit" class="half-widht">Torna alla Home</button>
+			</form>
+		</div>
 	</article>
-	
+
 	<!-- PULSANTE TORNA ALL'AREA STAFF -->
 	<article class="brick entry format-standard animate-this">
-	<div class="row">
-		<form name="cForm" id="cForm" method="get" action="/pannelloDiControllo" th:if="${utente == 'ADMIN'}">
-			<button type="submit" class="half-widht">Torna all'area Staff</button>
-		</form>
-	</div>
+		<div class="row">
+			<form name="cForm" id="cForm" method="get"
+				action="/pannelloDiControllo" th:if="${utente == 'ADMIN'}">
+				<button type="submit" class="half-widht">Torna all'area
+					Staff</button>
+			</form>
+		</div>
 	</article>
-	
+
 	<!-- PULSANTE NUOVA RICERCA -->
 	<article class="brick entry format-standard animate-this">
-	<div class="row">
-		<form name="cForm" id="cForm" method="get" action="/cercaFotografo" th:if="${utente == 'ADMIN'}">
-			<button type="submit" class="half-widht">Cerca Foto</button>
-		</form>
-	</div>
+		<div class="row">
+			<form name="cForm" id="cForm" method="get" action="/cercaFotografo"
+				th:if="${utente == 'ADMIN'}">
+				<button type="submit" class="half-widht">Cerca Foto</button>
+			</form>
+		</div>
 	</article>
 
 
-<!-- START BOTTOM FOOTER -->
-<footer>
+	<!-- START BOTTOM FOOTER -->
+	<footer>
 		<div class="footer-bottom">
 			<div class="row">
 
@@ -205,9 +229,9 @@
 
 	<!-- Java Script
    ================================================== -->
-	<script src="js/jquery-2.1.3.min.js"></script>
-	<script src="js/plugins.js"></script>
-	<script src="js/main.js"></script>
+	<script src="../js/jquery-2.1.3.min.js"></script>
+	<script src="../js/plugins.js"></script>
+	<script src="../js/main.js"></script>
 
 </body>
 
