--- a/src/main/resources/templates/pannelloDiControllo.html
+++ b/src/main/resources/templates/pannelloDiControllo.html
@@ -56,7 +56,7 @@
 							<li><a href="/MostraAlbums">Album</a></li>
 							<li><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
-					<li class="has-children"><a href="/carrello" title="">Carrello</a></li>
+					<li class="has-children"><a href="/mostraCarrello" title="">Carrello</a></li>
 					<li><a href="/about" title="">About</a></li>
 					<li class="current"><a href="/pannelloDiControllo" title="">Staff</a></li>
 				</ul>
