--- a/src/main/resources/templates/mostraAlbums.html
+++ b/src/main/resources/templates/mostraAlbums.html
@@ -49,7 +49,7 @@
 		<div class="row header-content">
 
 			<div class="logo">
-				<a href="/home">Author</a>
+				<a href="/">Author</a>
 			</div>
 
 			<nav id="main-nav-wrap">
@@ -58,7 +58,7 @@
 					<li class="has-children">Categorie
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
-							<li class="current"><a href="/mostraAlbums">Album</a></li>
+							<li><a href="/mostraAlbums">Album</a></li>
 							<li><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
 					<li><a href="/mostraCarrello" title="">Carrello</a></li>
