--- a/src/main/resources/templates/mostraFotografo.html
+++ b/src/main/resources/templates/mostraFotografo.html
@@ -46,7 +46,7 @@
 		<div class="row header-content">
 
 			<div class="logo">
-				<a href="/home">Author</a>
+				<a href="/">Author</a>
 			</div>
 
 			<nav id="main-nav-wrap">
@@ -56,7 +56,7 @@
 						<ul class="sub-menu">
 							<li><a href="/mostraFotos">Foto</a></li>
 							<li><a href="/mostraAlbums">Album</a></li>
-							<li  class="current"><a href="/mostraFotografi">Fotografi</a></li>
+							<li><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
 					<li><a href="/mostraCarrello" title="">Carrello</a></li>
 					<li><a href="/about" title="">About</a></li>
