--- a/src/main/resources/templates/confermaInserimentoAlbum.html
+++ b/src/main/resources/templates/confermaInserimentoAlbum.html
@@ -43,7 +43,7 @@
 		<div class="row header-content">
 
 			<div class="logo">
-				<a href="/home">Author</a>
+				<a href="/">Author</a>
 			</div>
 
 			<nav id="main-nav-wrap">
