--- a/src/main/resources/templates/ricercaAlbum.html
+++ b/src/main/resources/templates/ricercaAlbum.html
@@ -43,7 +43,7 @@
 		<div class="row header-content">
 
 			<div class="logo">
-				<a href="/home">Author</a>
+				<a href="/">Author</a>
 			</div>
 
 			<nav id="main-nav-wrap">
@@ -51,9 +51,9 @@
 					<li><a href="/" title="">Home</a></li>
 					<li class="has-children">Categorie
 						<ul class="sub-menu">
-							<li><a href="/fotos">Foto</a></li>
-							<li><a href="/albums">Album</a></li>
-							<li><a href="/fotografi">Fotografi</a></li>
+							<li><a href="/mostraFotos">Foto</a></li>
+							<li><a href="/mostraAlbums">Album</a></li>
+							<li><a href="/mostraFotografi">Fotografi</a></li>
 						</ul></li>
 					<li class="has-children"><a href="/mostraCarrello"
 						title="">Carrello</a></li>
