Modifiche minori html

--- a/src/main/resources/templates/mostraCarrello.html
+++ b/src/main/resources/templates/mostraCarrello.html
@@ -79,7 +79,7 @@
 	<section id="page-header">
 		<div class="row current-cat">
 			<div class="col-full">
-				<h1>carrello</h1>
+				<h1>Carrello</h1>
 			</div>
 		</div>
 	</section>
