--- a/src/main/resources/templates/mostraFoto.html
+++ b/src/main/resources/templates/mostraFoto.html
@@ -25,9 +25,14 @@
 			<button type="submit" class="half-width">Torna alla home</button>
 		</form>
 		
-		<form name="cForm" th:href="@{'/fotoCarrello' + '/' + ${foto.id}}" class="thumb-link">
-			<button type="submit" class="half-width" th:if="${utente != 'ADMIN'}">Aggiungi al carrello</button>
-		</form>
+		<a th:href="@{'/fotoCarrello' + '/' + ${foto.id}}" class="thumb-link">
+			<button type="submit" class="half-width" th:if="${utente != 'ADMIN' && aggiunto != 'TRUE'}">Aggiungi al carrello</button>
+		</a>
+		<span th:if="${aggiunto == 'TRUE'}"> &nbsp;&nbsp; Foto aggiunta correttamente </span>
+		
+		<a th:href="@{/mostraFotos}" class="thumb-link">
+			<button type="submit" class="half-width" th:if="${utente != 'ADMIN' && aggiunto == 'TRUE'}">Aggiungi un'altra foto</button>
+		</a>
 		
 	</div>
 </body>
