--- a/src/main/resources/templates/mostraFotografi.html
+++ b/src/main/resources/templates/mostraFotografi.html
@@ -79,7 +79,7 @@
 	<section id="page-header">
 		<div class="row current-cat">
 			<div class="col-full">
-				<h1>Fotografi</h1>
+				<h1><font size="30px">Fotografi</h1>
 				<h4> Tutti i fotografi registrati</h4>
 			</div>
 		</div>
